# voynich-data

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt
.github/workflows/: ci.yml
builders/: __init__.py  build_eva_lines.py  build_metadata.py  build_mismatch_index.py
data_sources/: checksums_all.txt  sources.yaml  verify_sources.py
docs/: PUBLISHING.md  ZENODO_SETUP.md  charset_decisions.md  data_model.md  decisions.md  eva_alphabet.md  progress.md  sources.md
hf/: __init__.py  export.py
huggingface/voynich-eva-transcription/: README.md  data.jsonl
huggingface/voynich-manuscript-metadata/: README.md  pages.jsonl
huggingface/voynich-transcription-mismatch/: README.md
notebooks/: 00_source_verification.ipynb  01_load_from_hf.ipynb  02_sanity_statistics.ipynb
output/: README.md  SHA256SUMS  eva_lines.parquet  eva_lines_build_report.json  mismatch_index.jsonl  mismatch_report.json  release_manifest.json
output/metadata/: folios.jsonl  folios.parquet  metadata_report.json  pages.parquet  quires.jsonl  quires.parquet
parsers/: __init__.py  ivtff_parser.py  metadata_parser.py
reports/: source_verification.json  source_verification_report.md
schemas/: mismatch_index.schema.json  transcription_lines.schema.json
scripts/: analyze_charset.py  deep_analysis.py  fetch_sources.py  quick_analysis.py  release_phase1.sh
templates/: dataset_card.md
tests/: __init__.py  conftest.py  test_builders.py  test_coverage_gaps.py  test_eva_charset.py  test_hf_export.py  test_invariants.py  test_metadata.py  test_mismatch_index.py  test_parsers.py  test_release_v0_2_1.py  test_validators.py  test_verify_sources.py
validators/: __init__.py  schema.py  validate_phase1_outputs.py  verify_invariants.py
vcat/: __init__.py  charset.py  eva_charset.py  exceptions.py  logging.py  py.typed  text_processing.py
