[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcat-data"
version = "0.2.3"
description = "Data processing infrastructure for the Voynich Computational Analysis Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Noah Chelednik"}
]
keywords = [
    "voynich",
    "manuscript",
    "transcription",
    "computational-humanities",
    "digital-humanities"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
    "types-requests",
    "types-PyYAML",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/noah-chelednik/voynich-data"
Documentation = "https://github.com/noah-chelednik/voynich-data#readme"
Repository = "https://github.com/noah-chelednik/voynich-data.git"
Issues = "https://github.com/noah-chelednik/voynich-data/issues"

[project.scripts]
vcat-verify = "data_sources.verify_sources:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vcat*", "parsers*", "builders*", "validators*", "hf*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"notebooks/*" = ["E402"]  # Allow imports not at top of file

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["vcat", "parsers", "builders", "validators"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
